frontend/packages/app/src/components/FileTree.less
.breeze-file-tree {
  height: 100%;
  display: flex;
  flex-direction: column;
  overflow: hidden;
  position: relative;

  .ant-tree {
    flex-grow: 1;
    flex-basis: 100%;
    overflow: auto;
    background-color: transparent;
  }

  .ant-tree-treenode {
    .ant-tree-node-content-wrapper {
      display: flex;
    }
    .ant-tree-title {
      flex-grow: 1;
    }
  }
}

.breeze-file-tree-trigger {
  height: 100%;
}

.breeze-file-dropdown {
  .ant-menu-item {
    height: 20px;
    line-height: 20px;
    padding: 0 10px;
  }
}

